[UPDATE] Update relationship and wrong logic of series management